--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="htpp://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
     <title>Serving HTML Content</title>
 </head>
 <body>
-    <p>Hello World!</p>
+    <p th:text="'Hello, ' + ${name} + '!'"></p>
 </body>
 </html>
