--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <h1 style="text-align: center;">Login</h1>
-<form th:action="@{/login}" th:object="${loginForm}" method="post">
-  <input type="text" th:field="*{username}" placeholder="Username"/><br/>
-  <input type="password" th:field="*{password}" placeholder="Password"/><br/>
+<form action=# th:action="@{/login}" th:object="${loginForm}" method="post">
+  <input type="text" th:field="*{username}" placeholder="Username"/>
+    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username error</span><br/>
+  <input type="password" th:field="*{password}" placeholder="Password"/>
+    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</span><br/>
+    <span style="color: red;" th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}">Global error</span><br/>
   <button type="submit">Login</button>
 </form>
 
