style: surrounded entire form in div for centering

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,8 @@
     <title>Login page</title>
 </head>
 <body>
-<h1 style="text-align: center;">Login</h1>
+<div style="text-align: center;">
+<h1>Login</h1>
 <form action=# th:action="@{/login}" th:object="${loginForm}" method="post">
   <input type="text" th:field="*{username}" placeholder="Username"/>
     <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username error</span><br/>
@@ -14,6 +15,7 @@
     <span style="color: red;" th:if="${#fields.hasGlobalErrors()}" th:errors="*{global}">Global error</span><br/>
   <button type="submit">Login</button>
 </form>
+</div>
 
 </body>
 </html>
